# ridsans

./: .gitignore  LICENSE  README.md  RIDSANS_Definition.xml  RIDSANS_Definition_template.xml  RIDSANS_pixel_by_pixel.xml  RID_command_interface.ipynb  batch_load_example.py  batch_processing_RIDSANS.py  batch_reduce_example.py  calibration-old-ref.ipynb  calibration-old.ipynb  data-renamer.py  detector-characterization.ipynb  image-viewer.ipynb  instrument-definition.ipynb  instrument-model.ipynb  load_RIDSANS.py  load_example.py  main.ipynb  mantid-standalone.ipynb  pixel-efficiency.ipynb  plot-2D-SANS-nexus.ipynb  pyproject.toml  reduce_RIDSANS.py  reduce_example.py  reduction-example.ipynb  reduction-prototype.ipynb  reduction.ipynb  reduction_high_level.ipynb  requirements.txt  sans-2-nexus-conversion.ipynb  sans-batchfile.csv  sansdata.py  setup.py  test.csv
characterization/: detector-characterization.ipynb  monochromator-rpm-fit.ipynb  resolution-model.ipynb
docs/: SANS-notes.md  mantid-notes.md  manual.md  reduction-overview.md  required-specifications.md  resources.md  user-guide.md
examples/: batch_load_example.py  batch_reduce_example.py  batch_reduce_maskfile.py  detector-characterization.ipynb  image-viewer.ipynb  load_example.py  reduce_example.py  reduction-example.ipynb  stitch.py
ridsans/: batch_processing.py  instrument_config.yaml  load.py  load_util.py  reduce.py  sansdata.py  save.py  stitch.py
test/: glassy_carbon_test.py  reduce_glassy_carbon.py  reduce_glassy_carbon_1D.py  reduce_glassy_carbon_2D.py  (+5 more)
test-data/: test-thickness.csv  test.csv
